# passive-network-monitor

./: .dockerignore  .env  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.build  Dockerfile.dev  README.md  docker-compose.yml
data/: .gitkeep  oui.csv  oui_raw.csv
docs/: design.md  runtime_flow_and_demo.md
frontend/: app.js  index.html  style.css
samples/: .gitkeep
scripts/: download_oui.py  download_oui.sh  generate_100_devices_pcap.py  generate_full_coverage_pcap.py  generate_violation_pcap.py  init_db.sql  seed_watchlist.sql
src/: main.cpp
src/api/: README.md  rest_server.cpp  rest_server.hpp
src/capture/: README.md  pcap_reader.cpp  pcap_reader.hpp
src/config/: README.md  config.cpp  config.hpp
src/db/: README.md  db_manager.cpp  db_manager.hpp
src/detection/: alert.hpp  detection_engine.cpp  detection_engine.hpp  rule_arp_spoofing.cpp  rule_arp_spoofing.hpp  rule_new_device.cpp  rule_new_device.hpp  rule_watchlist.cpp  rule_watchlist.hpp
src/enrichment/: README.md  os_fingerprint.cpp  os_fingerprint.hpp  oui_lookup.cpp  oui_lookup.hpp
src/ml/: README.md
src/parsers/: README.md  arp_parser.cpp  arp_parser.hpp  dhcp_parser.cpp  dhcp_parser.hpp  dns_message.cpp  dns_message.hpp  ethernet_parser.cpp  ethernet_parser.hpp  http_parser.cpp  http_parser.hpp  ipv4_parser.cpp  ipv4_parser.hpp  mdns_parser.cpp  mdns_parser.hpp  ssdp_parser.cpp  ssdp_parser.hpp  tcp_parser.cpp  tcp_parser.hpp  udp_parser.cpp  udp_parser.hpp
src/tracker/: README.md  asset.hpp  asset_tracker.cpp  asset_tracker.hpp
src/util/: binary_reader.cpp  binary_reader.hpp
tests/: CMakeLists.txt  test_arp_parser.cpp  test_asset_tracker.cpp  test_binary_reader.cpp  test_detection_rules.cpp  test_dhcp_parser.cpp  test_ethernet_parser.cpp  test_http_parser.cpp  test_ipv4_parser.cpp  test_mdns_parser.cpp  test_os_fingerprint.cpp  test_oui_lookup.cpp  test_ssdp_parser.cpp  test_udp_parser.cpp
web/: app.js  index.html  style.css
